Fixed button spacing on wide view

--- a/assets/css/project-body.less
+++ b/assets/css/project-body.less
@@ -106,7 +106,7 @@
 
                 .remind-me {
                     padding-top:   3rem;
-                    padding-right: 3rem;
+//                    padding-right: 3rem;
                     float:         right;
                 }
             }
